syntax = "proto3";

option java_multiple_files = true;
option java_package = "net.shyshkin.study.grpc.protobuf.models";

message EmailCredentials{
  string email = 1;
  string password = 2;
}
message PhoneOTP{
  int32 number = 1;
  int32 code = 2;
}
message Credentials{
  oneof mode{
    EmailCredentials email_mode = 1;
    PhoneOTP phone_mode = 2;
  }
}


